[package]
name = "gen-nested-iter-yield"
version = "0.1.3"
edition = "2021"
authors = ["Dominic <code@dominic.computer>"]
description = "A macro for creating n-nested for loops over iterators."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/DominicBurkart/gen-nested-iter-yield"

[lib]
proc-macro = true

[dev-dependencies]
futures = "0.3"
genawaiter = {version = "0.99.1", features=["futures03"]}
tokio = { version = "1", features = ["rt", "macros"] }
